# shuttle-actix-api

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  openmeteo.rs
src/models/: mod.rs  openmeteo.rs  osm.rs
static/: index.html
static/_astro/: OpenMeteoIsland.1faef45e.js  client.c6eaa817.js  index.7ffa4c1d.css  index.8d741b95.css  index.b15d739e.css  runtime-dom.esm-bundler.e8279036.js
static/projects/: index.html
