[package]
name = "pyotrgrowpotkin"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
shuttle-runtime = "0.14.0"
shuttle-static-folder = "0.15.0"
shuttle-actix-web = "0.14.0"
tokio = "1.28.0"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }